<resources>
    <string name="app_name">MyATM</string>
    <string name="action_settings">Settings</string>
    <string name="account">Account: </string>
    <string name="user_account">user_account</string>

    <!--activity_main-->
    <string name="act_main_atm_application">ATM APPLICATION</string>
    <string name="act_main_welcome">Welcome!</string>
    <string name="act_main_enter_your_password">Enter your password: </string>
    <string name="act_main_enter_your_account_number">Enter your account number: </string>
    <string name="act_main_enter">Enter</string>
    
    <!--activity_menu-->
    <string name="act_menu_main_menu">Main menu</string>
    <string name="act_menu_view_my_balance">View my balance</string>
    <string name="act_menu_transfer_money">Transfer money</string>
    <string name="act_menu_withdraw_cash">Withdraw cash</string>
    <string name="act_menu_deposit_funds">Deposit funds</string>
    <string name="act_menu_exit">Exit!</string>

    <!--activity_view_balance-->
    <string name="act_view_balance_your_balance">Your Balance!</string>
    <string name="act_view_balance_user_balance">9999</string>
    <string name="act_view_balance_menu">Menu</string>

    <!--activity_transfer-->
    <string name="act_transfer">Transfer Money</string>
    <string name="act_transfer_enter_account_number">Enter account number: </string>
    <string name="act_transfer_enter_amount">Enter amount: </string>
    <string name="act_transfer_enter">Enter</string>
    <string name="act_transfer_cancel">Cancel</string>


    <!--activity_deposit-->
    <string name="act_deposit_deposit_option">Deposit Option</string>
    <string name="act_deposit_20">$20</string>
    <string name="act_deposit_40">$40</string>
    <string name="act_deposit_60">$60</string>
    <string name="act_deposit_100">$100</string>
    <string name="act_deposit_300">$300</string>
    <string name="act_deposit_500">$500</string>
    <string name="act_deposit_cancel_transaction">Cancel Transaction</string>

    <!--activity_withdraw-->
    <string name="act_withdraw_withdraw_option">Withdraw Option</string>
    <string name="act_withdraw_20">$20</string>
    <string name="act_withdraw_40">$40</string>
    <string name="act_withdraw_60">$60</string>
    <string name="act_withdraw_100">$100</string>
    <string name="act_withdraw_300">$300</string>
    <string name="act_withdraw_500">$500</string>
    <string name="act_withdraw_cancel_transaction">Cancel Transaction</string>

</resources>
