<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WithdrawActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="113dp"
        android:text="@string/account"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/account"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/user_account"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="78dp"
        android:text="@string/act_withdraw_withdraw_option"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/button13"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:onClick="withDraw20"
        android:text="@string/act_withdraw_20"
        app:layout_constraintBaseline_toBaselineOf="@+id/button14"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="31dp"
        android:onClick="withDraw40"
        android:text="@string/act_withdraw_40"
        app:layout_constraintStart_toEndOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="withDraw60"
        android:text="@string/act_withdraw_60"
        app:layout_constraintBaseline_toBaselineOf="@+id/button16"
        app:layout_constraintStart_toStartOf="@+id/button13" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="withDraw100"
        android:text="@string/act_withdraw_100"
        app:layout_constraintStart_toStartOf="@+id/button14"
        app:layout_constraintTop_toBottomOf="@+id/button14" />

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="withDraw300"
        android:text="@string/act_withdraw_300"
        app:layout_constraintBaseline_toBaselineOf="@+id/button18"
        app:layout_constraintStart_toStartOf="@+id/button15" />

    <Button
        android:id="@+id/button18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="withDraw500"
        android:text="@string/act_withdraw_500"
        app:layout_constraintStart_toStartOf="@+id/button16"
        app:layout_constraintTop_toBottomOf="@+id/button16" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="30dp"
        android:onClick="pageMenu"
        android:text="@string/act_withdraw_cancel_transaction"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/button18"
        app:layout_constraintTop_toBottomOf="@+id/button17" />

</android.support.constraint.ConstraintLayout>