<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransferActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="113dp"
        android:text="@string/account"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/account"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/user_account"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:layout_marginStart="39dp"
        android:text="@string/act_transfer"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/acc_num"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="169dp"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="168dp"
        android:text="@string/act_transfer_enter_account_number"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/button23"
        app:layout_constraintEnd_toEndOf="@+id/amount"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/acc_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="34dp"
        android:ems="4"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView19"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="39dp"
        android:layout_marginStart="39dp"
        android:text="@string/act_transfer_enter_amount"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/amount"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:ems="4"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/acc_num"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/button22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="95dp"
        android:layout_marginEnd="57dp"
        android:layout_marginStart="56dp"
        android:onClick="transferMoney"
        android:text="@string/act_transfer_enter"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/acc_num"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="43dp"
        android:onClick="pageMenu"
        android:text="@string/act_transfer_cancel"
        android:textAllCaps="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/button22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button22" />


</android.support.constraint.ConstraintLayout>